dnl Process this file with autoconf to produce a configure script.
dnl
AC_INIT(initscan.c)
AC_CONFIG_HEADER(config.h:conf.in)

AC_LN_S
AC_PROG_YACC
AC_PROG_CC
AC_PROG_RANLIB
AC_PROG_INSTALL
AC_PROG_MAKE_SET
AC_CONST
AC_TYPE_SIZE_T
AC_HEADER_STDC
AC_HAVE_HEADERS(string.h malloc.h sys/types.h)

case "$YACC" in
*bison*)
  AC_ALLOCA
  ;;
esac

AC_OUTPUT(Makefile,
[test -z "$CONFIG_HEADERS" || echo timestamp > stamp-h])
